Kubernetes/Asustornas1/yamls/ig-asustornas1.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: asustornas1-service
  namespace: traefik-external
  labels:
    app: asustornas1-service
subsets:
  - addresses:
      - ip: <IP>
    ports:
      - port: 8001
        name: asustornas1
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: asustornas1-service
  namespace: traefik-external
  labels:
    app: asustornas1-service
spec:
  ports:
    - name: asustornas1
      protocol: TCP
      port: 443
      targetPort: 8001
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-asustornas1-secureheaders
  namespace: traefik-external
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-asustornas1-websecure
  namespace: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`asustornas1.domain.com`)
      services:
        - name: asustornas1-service
          port: 443
          serversTransport: traefik-asustornas1-transport
      middlewares:
        - name: traefik-asustornas1-secureheaders
  tls:
    secretName: asustornas1-domain-com
    options:
      name: traefik-asustornas1-tlsoptions
